.resp-menu-open overflow => hidden

--- a/src/assets/scss/theme/core/_header.scss
+++ b/src/assets/scss/theme/core/_header.scss
@@ -253,7 +253,7 @@ header .navbar-nav {
       }
    }
    .resp-menu-opened{
-      // overflow: hidden;
+      overflow: hidden;
       .navbar-collapse{
          height: calc(100vh - 66px);
          align-self: start;
